--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'java-gradle-plugin'
 
 repositories {
     mavenCentral()
@@ -27,4 +28,5 @@ dependencies {
     compile 'org.xhtmlrenderer:flying-saucer-pdf:9.1.1'
 
     testCompile 'junit:junit:4.12'
+    testCompile gradleTestKit()
 }
